bindata/assets/lws-controller/networkpolicy/10-allow-ingress-egress-metrics.yaml
# Allow metrics scrape traffic to/from platform monitoring.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lws-allow-ingress-egress-metrics
  namespace: openshift-lws-operator
spec:
  podSelector:
    matchLabels:
      app.openshift.io/name: lws
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              openshift.io/cluster-monitoring: "true"
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-user-workload-monitoring
      ports:
        - protocol: TCP
          port: 8443
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              openshift.io/cluster-monitoring: "true"
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-user-workload-monitoring
      ports:
        - protocol: TCP
          port: 8443
